# pre-commit-hooks

./: .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg  setup.py
pre_commit_hooks/: check_branch_name_length.py
