[metadata]
name = jowo_pre_commit_hooks
description = Some hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jonasundderwolf/pre-commit-hooks
version = 1.0.0
author = "Jonas und der Wolf GmbH"
author_email = "opensource@jonasundderwolf.de"
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    'Programming Language :: Python :: 3'
    'Programming Language :: Python :: 3.6'
    'Programming Language :: Python :: 3.7'
    'Programming Language :: Python :: 3.8'
    'Programming Language :: Python :: 3.9'
    'Programming Language :: Python :: Implementation :: CPython'
    'Programming Language :: Python :: Implementation :: PyPy'

[options]
packages = find:
install_requires =
    ruamel.yaml>=0.15
    toml
python_requires = >=3.6.1

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    check-branch-name-length = pre_commit_hooks.check_branch_name_length:main

[bdist_wheel]
universal = True
